# parallel-lab1

./: CMakeLists.txt  RandomVector.cpp  RandomVector.h  SquareMatrix.cpp  SquareMatrix.h  main.cpp
